zapata-agentforce/force-app/main/default/objects/Invalidacion_Garantia__c/Invalidacion_Garantia__c.object-meta.xml
<CustomObject>
    <description>Evento que cancela la garantia de una unidad. El articulo es explicito: la invalidacion aplica SOLO al sistema afectado. Una reprogramacion de potencia cancela motor y transmision, no la corrosion de cabina.</description>
    <label>Invalidacion de garantia</label>
    <pluralLabel>Invalidaciones de garantia</pluralLabel>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>