zapata-agentforce/force-app/main/default/objects/Invalidacion_Garantia__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <description>Unidad afectada.</description>
    <label>Unidad</label>
    <deleteConstraint>Cascade</deleteConstraint>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Invalidaciones de garantia</relationshipLabel>
    <relationshipName>Invalidaciones_Garantia</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>