zapata-agentforce/force-app/main/default/objects/Invalidacion_Garantia__c/fields/Causa__c.field-meta.xml
<CustomField>
    <fullName>Causa__c</fullName>
    <description>Las siete causas del articulo. No se aceptan motivos inventados.</description>
    <label>Causa</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Aceite o lubricante fuera de especificacion</fullName>
                </value>
                <value>
                    <fullName>Reparacion fuera de la red autorizada</fullName>
                    <default>true</default>
                    <label>Reparacion fuera de la red autorizada</label>
                </value>
                <value>
                    <fullName>Reprogramacion de potencia o supresion de post-tratamiento</fullName>
                </value>
                <value>
                    <fullName>Operacion con sobrepeso sobre el PBV nominal</fullName>
                </value>
                <value>
                    <fullName>Omision de dos o mas servicios preventivos consecutivos</fullName>
                </value>
                <value>
                    <fullName>Alteracion del odometro</fullName>
                </value>
                <value>
                    <fullName>Siniestro, inundacion o uso no previsto por el fabricante</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>