zapata-agentforce/force-app/main/default/objects/Invalidacion_Garantia__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Une con la conversacion si la detecto el agente.</description>
    <label>Correlation Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>