zapata-agentforce/force-app/main/default/objects/Invalidacion_Garantia__c/fields/Evidencia__c.field-meta.xml
<CustomField>
    <fullName>Evidencia__c</fullName>
    <description>Con que se sustenta. Sin evidencia documentada la invalidacion no se puede defender frente a un reclamo.</description>
    <label>Evidencia</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>