zapata-agentforce/force-app/main/default/objects/Invalidacion_Garantia__c/fields/Fecha_Deteccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Deteccion__c</fullName>
    <description>Cuando se detecto la causa.</description>
    <label>Fecha de deteccion</label>
    <type>Date</type>
</CustomField>