zapata-agentforce/force-app/main/default/objects/Invalidacion_Garantia__c/fields/Knowledge_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Id__c</fullName>
    <description>Articulo que respalda la causa aplicada.</description>
    <label>Id de articulo Knowledge</label>
    <length>80</length>
    <type>Text</type>
</CustomField>