zapata-agentforce/force-app/main/default/objects/Invalidacion_Garantia__c/fields/Sistema_Afectado__c.field-meta.xml
<CustomField>
    <fullName>Sistema_Afectado__c</fullName>
    <description>SOLO este sistema pierde cobertura. Los demas siguen vigentes.</description>
    <label>Sistema afectado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Tren motriz</fullName>
                    <default>true</default>
                    <label>Tren motriz</label>
                </value>
                <value>
                    <fullName>Electrico y electronica</fullName>
                </value>
                <value>
                    <fullName>Cabina</fullName>
                </value>
                <value>
                    <fullName>Chasis y estructura</fullName>
                </value>
                <value>
                    <fullName>Frenos</fullName>
                </value>
                <value>
                    <fullName>Refrigeracion</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>