zapata-agentforce/force-app/main/default/objects/Invalidacion_Garantia__c/fields/Vigente__c.field-meta.xml
<CustomField>
    <fullName>Vigente__c</fullName>
    <description>Permite revertir una invalidacion mal aplicada sin borrar el registro.</description>
    <label>Vigente</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>