zapata-agentforce/force-app/main/default/objects/Invalidacion_Garantia__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Asset__c</columns>
    <columns>Sistema_Afectado__c</columns>
    <columns>Causa__c</columns>
    <columns>Fecha_Deteccion__c</columns>
    <columns>Vigente__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>